Improves structure and gives a sample of API documentation using swagger
