# src/routes/routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import infoRoutes from './info/infoRoutes';
+import infoController from '../info/infoController';
 
 const routes = Router();
 
@@ -7,6 +7,6 @@ routes.get('/', (req, res) => {
   res.send('Hello World');
 });
 
-routes.use('/info', infoRoutes);
+routes.use('/info', infoController);
 
 export default routes;
